# mcpsol

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.specify/memory/: constitution.md
anchor/: Cargo.toml
anchor/src/: lib.rs
benches/: README.md  compare.sh
client/: Cargo.toml
client/src/: lib.rs
core/: Cargo.toml
core/src/: discriminator.rs  json.rs  lib.rs  schema.rs
core/tests/: baseline.rs  cu_benchmarks.rs  overhead.rs  pagination.rs
docs/: README.md  ai-agents.md  architecture.md  integration.md  overhead.md  philosophy.md  schema.md
examples/: README.md
examples/anchor-counter/: README.md
examples/anchor-counter/programs/anchor-counter/: Cargo.toml
examples/anchor-counter/programs/anchor-counter/src/: lib.rs
examples/counter/: Cargo.toml  README.md
examples/counter/src/: lib.rs
examples/minimal-counter/: Cargo.toml  README.md
examples/minimal-counter/src/: lib.rs
examples/native-counter/: Cargo.toml  README.md
examples/native-counter/src/: lib.rs
examples/vault/: Cargo.toml  README.md
examples/vault/src/: lib.rs
idl2mcp/: Cargo.toml
idl2mcp/src/: lib.rs  main.rs
macros/: Cargo.toml
macros/src/: discriminator.rs  lib.rs  mcp_gen.rs  program.rs
native/: Cargo.toml
native/src/: lib.rs
sdk/: Cargo.toml
sdk/src/: account.rs  context.rs  error.rs  lib.rs  mcp.rs  read.rs  traits.rs
specs/001-optimize-cu/: data-model.md  quickstart.md  research.md  results.md  spec.md  tasks.md
specs/001-optimize-cu/checklists/: requirements.md
specs/001-optimize-cu/contracts/: README.md
specs/002-minimize-framework-overhead/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-minimize-framework-overhead/contracts/: generated-code.md
ts-client/: package.json  tsconfig.json
ts-client/examples/: ai-agent.ts
ts-client/scripts/: ai-agent-demo.mjs  read-counter.mjs  test-counter.mjs  test-list-tools.mjs
ts-client/src/: index.test.ts  index.ts
