[workspace]
resolver = "2"
members = [
    "sdk",
    "macros",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/slonana-labs/mcpsol"

[workspace.dependencies]
# Solana / Pinocchio
pinocchio = "0.8"
pinocchio-system = "0.4"
pinocchio-token = "0.4"
pinocchio-associated-token = "0.4"
pinocchio-log = "0.4"
solana-program = "2.2"

# MCP schema generation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Proc macros
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
