[workspace]
resolver = "2"
members = [
    "core",
    "anchor",
    "native",
    "sdk",
    "macros",
    "idl2mcp",
    "client",
    "examples/counter",
    "examples/minimal-counter",
    "examples/native-counter",
    "examples/anchor-counter/programs/anchor-counter",
    "examples/vault",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/slonana-labs/mcpsol"

[workspace.dependencies]
# Solana / Pinocchio
pinocchio = "0.8"
pinocchio-system = "0.4"
pinocchio-token = "0.4"
pinocchio-associated-token = "0.4"
pinocchio-log = "0.4"
solana-program = "2.2"

# MCP schema generation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Proc macros
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Serialization
bytemuck = { version = "1.14", features = ["derive"] }

# Crypto
sha2 = "0.10"

[workspace.lints.rust]
# Suppress cfg warnings from external crates (pinocchio, anchor)
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))',
]}

[workspace.lints.clippy]
# Correctness
all = { level = "warn", priority = -1 }

# Clarity and maintainability
missing_const_for_fn = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
cloned_instead_of_copied = "warn"
unnecessary_wraps = "warn"

# Performance
inefficient_to_string = "warn"

# Security-relevant
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"

# Style consistency
module_name_repetitions = "allow"
too_many_arguments = "allow"
similar_names = "allow"
