[package]
name = "mcpsol-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for mcpsol SDK"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
