[package]
name = "minimal-counter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[dependencies]
mcpsol = { path = "../../sdk" }
pinocchio = { workspace = true }
bytemuck = { workspace = true }

[lints]
workspace = true
